refactor: Complete 20-byte address migration and test fixes (Phase 10)
This commit completes the Phase 10 address refactoring by standardizing
address utilities and fixing all remaining test failures.

## Code Standardization

### Address Utility Migration
- Replace BasicUtils.pubAddress2Bytes() with AddressUtils.fromBase58Address()
- Remove redundant pubAddress2Bytes() method from BasicUtils
- Use canonical xdagj-crypto AddressUtils throughout codebase

Modified files:
- src/main/java/io/xdag/cli/Commands.java:1009
- src/main/java/io/xdag/cli/Shell.java:164
- src/main/java/io/xdag/config/GenesisConfig.java:349
- src/main/java/io/xdag/utils/BasicUtils.java (method removed)

## Test Fixes (299/299 passing)

### 1. DagKernelIntegrationTest (18 errors → 0)
- Add missing genesisCoinbase to genesis.json
- Update all address types from Bytes32 to Bytes (20 bytes)
- Fix address generation: Bytes32.random() → Bytes.random(20)

### 2. DagBlockProcessorIntegrationTest (7 errors → 0)
- Fix coinbase parameters: Bytes32.random() → Bytes.random(20)
- Resolve BufferOverflowException in block hash calculation

### 3. DagChainIntegrationTest (3 errors → 0)
- Add genesisCoinbase to test genesis.json
- Update test account addresses to 20-byte format
- Fix coinbase parameters in block creation

### 4. ShellTest (5 errors + 1 failure → 0)
- Update AccountStore mocks: any(Bytes32.class) → any(Bytes.class)
- Keep TransactionStore mocks as Bytes32 (block hashes remain 32-byte)
- Fix coinbase in createMockBlock() helper

### 5. BlockProcessingPerformanceTest
- Update sender address field from Bytes32 to Bytes
- Fix nonce management for AccountStore integration
- Increase initial balance from 1,000 to 10,000 XDAG

### 6. MessageFactoryTest (1 failure → 0)
- Create missing MessageException.java class
- Update test to use valid message code 0x16 (BLOCK_REQUEST)
- Fix test expectation: invalid code 0x01 → malformed body for valid code

## Impact

### Storage Optimization
- AccountStore key size